syntax = "proto3";

package planningpoker.realtime.base;

option go_package = "planningpoker/domain_models/dist_go/base";

enum RoomState {
    VOTING = 0;
    SHOWING_RESULT = 1;
}